# ushuaiaVerb

./: .gitignore  CMakeLists.txt
plugin/: CMakeLists.txt
plugin/include/ushuaiaVerb/: ushuaiaVerb.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
